--- a/stream_receiver/src/configs/basic.toml
+++ b/stream_receiver/src/configs/basic.toml
@@ -1,7 +1,7 @@
 [server]
-address = "127.0.0.1"
+address = "0.0.0.0"
 port = 9087
 
-[metra]
-address = "127.0.0.1"
-port = 8080
+[monolith]
+address = "0.0.0.0"
+http_port = 8080
